--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -1,12 +1,17 @@
-# finmath lib cuda extensions
+finmath lib cuda extensions
+==========
 
-- - - -
-**Enabling finmath lib with Cuda via jCuda. - Running finmath lib models on a GPU**
-- - - -
+****************************************
+
+**Enabling finmath lib with Cuda via jCuda. - Running finmath lib models on a GPU.**
+
+****************************************
 
 The *finmath lib cuda extensions* provide a Cuda implementation of the [finmath lib](http://finmath.net/finmath-lib/) interfaces `RandomVariable` and `BrownianMotion` compatible with finmath lib 4.0.12 or later.
 
-### RandomVariable ###
+#[[
+### RandomVariable
+]]#
 
 A `RandomVariableCudaFactory` is provided, which can be injected in any finmath lib model/algorithm using a random variable factory to construct `RandomVariable` objects. Objects created from this factory or from objects created from this factory perform their calculation on the GPU.
 
@@ -14,11 +19,14 @@ The implementation supports type priorities (see http://ssrn.com/abstract=324612
 
 The `RandomVariableCudaFactory` can be combined with *algorithmic differentiation* AAD wrappers, for example `RandomVariableDifferentiableAAD`, to allow algorithmic differentiation together with calculations performed on the GPU. For the type priority: objects allowing for algorithmic differentiation (AAD) have higher priority, AAD on GPU has higher priority than AAD on CPU.
 
-### BrownianMotion ###
+#[[
+### BrownianMotion
+]]#
 
 In addition, objects of type `BrownianMotion` are also taking the role of a factory for objects of type `RandomVariable`. Thus, injecting the `BrownianMotionCuda` into classes consuming a `BrownianMotion` will result in finmath-lib models performing their calculations on the GPU - seamlessly.
 
-## Distribution
+Distribution
+-------------------------------------
 
 finmath-lib-cuda-extensions is distributed through the central Maven repository. It's coordinates are:
 
@@ -26,7 +34,8 @@ finmath-lib-cuda-extensions is distributed through the central Maven repository.
     <artifactId>finmath-lib-cuda-extensions</artifactId>
 	<version>${project.version}</version>
 
-## Example
+Example
+-------------------------------------
 
 Create a vector of floats on the GPU device
 ```
@@ -47,7 +56,8 @@ double[] result = randomVariable.getRealizations();
 ```
 (note: the result is always double, since different implementation may support float or double on the device).
 
-## Installation / Build
+Installation / Build
+-------------------------------------
 
 Binary distribution is available via Maven central.
 
@@ -63,7 +73,8 @@ mvn clean package
 ```
 If everything goes well, you will see unit test run. Note that some of the tests may fail if the device (GPU) has not enough memory. 
 
-## Trying on Amazon EC2
+Trying on Amazon EC2
+-------------------------------------
 
 If you do not have a machine with NVidia Cuda 10.0 at hand, you may try out the finmath-lib-cuda-extensions on an Amazon EC2 machine. To do so:
 
@@ -76,9 +87,12 @@ If you do not have a machine with NVidia Cuda 10.0 at hand, you may try out the 
 * Check that you have cuda 10.0 (e.g. use `nvcc --version`)
 * Try finmath-lib-cuda-extensions as described in the previous section.
 
-## Performance
+Performance
+-------------------------------------
 
+#[[
 ### Unit test for random number generation:
+]]#
 
 ```
 Running net.finmath.montecarlo.BrownianMotionTest
@@ -88,7 +102,9 @@ Test of performance of BrownianMotionCudaWithHostRandomVariable	..........test t
 Test of performance of BrownianMotionCudaWithRandomVariableCuda	..........test took 2.325 sec.
 ```
 
+#[[
 ### Unit test for Monte-Carlo simulation
+]]#
 
 ```
 Running net.finmath.montecarlo.assetderivativevaluation.MonteCarloBlackScholesModelTest
@@ -104,8 +120,9 @@ Remark:
 * `BrownianMotionCudaWithHostRandomVariable`: Calculation on CPU and GPU: Random number generator on GPU, Simulation on CPU.
 * `BrownianMotionCudaWithRandomVariableCuda`: Calculation on GPU: Random number generator on GPU, Simulation on GPU.
 
-
+#[[
 ### Unit test for LIBOR Market Model calibration
+]]#
 
 There is also a unit test performing a brute force Monte-Carlo calibration of a LIBOR Market Model with stochastic volatility on the CPU and the GPU. Note however that the unit test uses a too small size for the number of simulation paths, such that the GPU code is no improvement over the CPU code. The unit test shows that CPU and GPU give consistent results.
 
@@ -114,7 +131,9 @@ The performance of a brute-force Monte-Carlo calibration with 80K and 160K paths
 The CPU version was run on a an Intel i7-7800X 3.5 GHz using multi-threadded calibration.
 THe GPU version was run on an nVidia GeForce GTX 1080.
 
+#[[
 #### LMM with 81,920 paths
+]]#
 
 ```
 Running net.finmath.montecarlo.interestrates.LIBORMarketModelCalibrationTest
@@ -124,7 +143,9 @@ Calibration to Swaptions using GPU    calculation time =  49.46 sec    RMS Error
 ```
 (LIBOR Market Model with stochastic volatility, 6 factors, 81920 paths)
 
+#[[
 #### LMM with 163,840 paths
+]]#
 
 ```
 Running net.finmath.montecarlo.interestrates.LIBORMarketModelCalibrationTest
@@ -134,7 +155,8 @@ Calibration to Swaptions using GPU    calculation time =  51.70 sec    RMS Error
 ```
 (LIBOR Market Model with stochastic volatility, 6 factors, 163840 paths)
 
-## References
+References
+-------
 
 * [finmath lib Project documentation](http://finmath.net/finmath-lib/)
 provides the documentation of the library api.
@@ -144,7 +166,8 @@ provides the documentation of the library api.
 cover some selected topics with demo spreadsheets and uml diagrams.
 Some topics come with additional documentations (technical papers).
 
-## License
+License
+-------
 
 The code of "finmath lib", "finmath experiments" and "finmath lib cuda extensions" (packages
 `net.finmath.*`) are distributed under the [Apache License version
