Added ATI Redeon Pro 560 for testing.

--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -8,7 +8,7 @@ finmath lib cuda extensions
 ****************************************
 
 The *finmath lib cuda extensions* provide a **Cuda** and **OpenCL** implementation of the [finmath lib](http://finmath.net/finmath-lib/) interfaces `RandomVariable` and `BrownianMotion` compatible with finmath lib 4.0.12 or later
-(tested on GRID GPU Kepler GK105, GeForce GTX 1080, GeForce GT 750M).
+(tested on GRID GPU Kepler GK105, GeForce GTX 1080, GeForce GT 750M (Cuda and OpenCL) and ATI Radeon Pro 560 (OpenCL only)).
 
 #[[
 ### RandomVariable
