--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -40,8 +40,8 @@ finmath-lib-cuda-extensions is distributed through the central Maven repository.
 	<version>${project.version}</version>
 
 
-The project is currently build for Cuda 10.1 and OpenCL 2.0.
-For other Cuda versions use the Maven command line property `cuda.version` set to one of `8.0`, `9.2`, `10.0`, `10.1` and the Maven classifyer `cuda-${cuda.version}`.
+The project is currently build for Cuda 10.2 and OpenCL 2.0.
+For other Cuda versions use the Maven command line property `cuda.version` set to one of `8.0`, `9.2`, `10.0`, `10.1`, `10.2` and the Maven classifyer `cuda-${cuda.version}`.
 
 Example
 -------------------------------------
@@ -97,10 +97,10 @@ cd finmath-lib-cuda-extensions
 mvn clean package
 ```
 
-This will build the version using Cuda 10.1. For Cuda 10.0 use
+This will build the version using Cuda 10.2. For Cuda 10.1 use
 
 ```
-mvn -Dcuda.version=10.0 clean package
+mvn -Dcuda.version=10.1 clean package
 ```
 
 If everything goes well, you will see unit test run. Note that some of the tests may fail if the device (GPU) has not enough memory. 
@@ -191,7 +191,23 @@ Calibration to Swaptions using GPU    calculation time =  51.70 sec    RMS Error
 Profiles for Other Cuda Versions
 -------------------------------------
 
-The default profile will build the version using Cuda 10.1.
+The default profile will build the version using Cuda 10.2.
+
+#[[
+#### Cuda 10.1
+]]#
+
+For Cuda 10.1 use
+
+```
+mvn -Pcuda-10.1 clean package
+```
+
+or
+
+```
+mvn -Dcuda.version=10.1 clean package
+```
 
 #[[
 #### Cuda 10.0
